@@ -24,7 +24,6 @@ export class Routes extends React.Component{
         
         return (
             <div className="body-wrapper">
-            <h1>Home</h1>
                 <Switch>            
                     <Redirect exact from="/" to="/theKnews/home" /> 
                     <Redirect exact from="/theKnews/" to="/theKnews/home" /> 
